feat(timezone): resolve from /etc/timezone + TZ env, propagate to subprocesses
Sage.java: extract TimeZone resolution into resolveConfiguredTimeZone() with documented fallback chain (time_zone property -> /etc/timezone -> TZ env -> JVM default). Add applyRuntimeTimeZone() to centralise TimeZone.setDefault + user.timezone system property + DF*.setTimeZone wiring; cache resolvedTimeZoneId for subprocess propagation.

Add logTimeZoneConsistencyCheck() (warns on ZoneId vs TimeZone mismatches and >5s wall-clock drift) and configureSmbClientDefaults() (jcifs.smb.client.minVersion/maxVersion default SMB202..SMB311 with property override).

Add public Sage.applyTimeZoneToProcessBuilder(pb) helper; wire it into FFMPEGTranscoder (xcoding + ffprobe spawn paths) and CommercialDetectionJob (comskip + external launcher) so spawned processes inherit the resolved TZ via env.